@startuml

    namespace ua.khpi.oop.malokhvii05.common.eventbus.meta {

        class SubscriberMetadata {
            -referencePolicy: SubscriberReferencePolicy
            -subscriberType: Class<?>
            ~SubscriberMetadata(Subscriber, Class<?>)
            +getReferencePolicy(): SubscriberReferencePolicy
            +getSubscriberType(): Class<?>
        }

        class SubscribeMetadata {
            -eventType: Class<?>
            -priority: int
            ~SubscribeMetadata(Subscribe, Class<?>)
            +getEventType(): Class<?>
            +getPriority(): int
        }

        class AnnotationMetadatas {
            -AnnotationMetadatas()
            {static} +newSubscribeMetadata(Method): SubscribeMetadata
            {static} +newSubscriberMetadata(Class<?>): SubscriberMetadata
        }

        class AnnotationMetadataException {
            {static} -serialVersionUID: long
            +AnnotationMetadataException()
            +AnnotationMetadataException(String)
            +AnnotationMetadataException(String, Throwable)
            +AnnotationMetadataException(Throwable)
        }

        abstract class AnnotationMetadata {
            -annotationType: Class<?>
            #AnnotationMetadata(Annotation)
            +getAnnotationType(): Class<?>
        }

        AnnotationMetadata <|-- SubscriberMetadata

        AnnotationMetadata <|-- SubscribeMetadata

        class java.lang.RuntimeException
        java.lang.RuntimeException <|-- AnnotationMetadataException

    }

@enduml
